Removed unwanted escape chars in reports' bundles

--- a/rpt/BillsReport.properties
+++ b/rpt/BillsReport.properties
@@ -16,11 +16,7 @@ Paid = Paid
 
 Patient = Patient
 
-Periodical.Incomes.Billed.And.Receivables.Report = Periodical \
-                                                    Incomes/Billed \
-                                                    and \
-                                                    Receivables \
-                                                    Report
+Periodical.Incomes.Billed.And.Receivables.Report = Periodical Incomes / Billed and Receivables Report
 
 All.Invoices = (all invoices)
 
