--- a/rpt/BillsReportPending.properties
+++ b/rpt/BillsReportPending.properties
@@ -16,21 +16,9 @@ Paid = Paid
 
 Patient = Patient
 
-Periodical.Incomes.Billed.And.Receivables.Report = Period\
-	                                                 ical \
-	                                                 Income\
-	                                                 s/Bill\
-	                                                 ed \
-	                                                 and \
-	                                                 Receiv\
-	                                                 ables \
-	                                                 Report
+Periodical.Incomes.Billed.And.Receivables.Report = Periodical Incomes / Billed and Receivables Report
 
-With.Pending.Invoices = (with \
-                         pendin\
-                         g \
-                         invoic\
-                         es)
+With.Pending.Invoices = (with pending invoices)
 
 Receivables = RECEIVABLES
 
