--- a/rpt/MOH705A_Under_5_Years_Daily_Outpatient_Morbidity_Summary_Sheet.properties
+++ b/rpt/MOH705A_Under_5_Years_Daily_Outpatient_Morbidity_Summary_Sheet.properties
@@ -2,7 +2,7 @@
 
 Diseases = DISEASES
 
-District = District\u0009
+District = District
 
 Facility = FACILITY
 
@@ -12,8 +12,6 @@ RepublicOfKenyaMinistryOfHealth = REPUBLIC OF KENYA - MINISTRY OF HEALTH
 
 Totals = Totals
 
-Under5YearsDailyOutpatientMorbiditySummarySheet = UNDER 5 YEARS - DAILY \
-                                                  OUTPATIENT MORBIDITY SUMMARY \
-                                                  SHEET
+Under5YearsDailyOutpatientMorbiditySummarySheet = UNDER 5 YEARS - DAILY OUTPATIENT MORBIDITY SUMMARY SHEET
 
 Year = YEAR
