--- a/rpt/MOH717_Monthly_Workload_Report_for_Hospitals_page2b.properties
+++ b/rpt/MOH717_Monthly_Workload_Report_for_Hospitals_page2b.properties
@@ -20,8 +20,7 @@ Embalment = Embalment
 
 EnhancementWithContrastMedia = Enhancement with contrast media
 
-F.SpecialServices = F. SPECIAL SERVICES (includes both inpatients and \
-                    outpatients)
+F.SpecialServices = F. SPECIAL SERVICES (includes both inpatients and outpatients)
 
 FreshStillBirth = Fresh still birth
 
@@ -45,13 +44,11 @@ NonPrivate = Non-private
 
 Number = NUMBER
 
-OccupationalTherapyNumberOfTreatments = Occupational Therapy - Number of \
-                                        Treatments
+OccupationalTherapyNumberOfTreatments = Occupational Therapy - Number of Treatments
 
 Operations = OPERATIONS
 
-OrthopaedicTecnologyNoOfItems = Orthopaedic Tecnology - No of ITEMS e.g. a \
-                                pair of crutches, Prosthesis, etc as one item
+OrthopaedicTecnologyNoOfItems = Orthopaedic Tecnology - No of ITEMS e.g. a pair of crutches, Prosthesis, etc as one item
 
 OutpatientRecords = Outpatient records
 
