--- a/rpt/WardPharmacyIncomes.properties
+++ b/rpt/WardPharmacyIncomes.properties
@@ -2,9 +2,9 @@
 
 Date = Date
 
-IncomingDrugs = \ - INCOMING DRUGS
+IncomingDrugs = - INCOMING DRUGS
 
-LotN = Lot N\u00B0
+LotN = Lot N°
 
 Medical = Medical
 
