--- a/rpt/MOH705B_Over_5_Years_Daily_Outpatient_Morbidity_Summary_Sheet.properties
+++ b/rpt/MOH705B_Over_5_Years_Daily_Outpatient_Morbidity_Summary_Sheet.properties
@@ -10,9 +10,7 @@ MOH705A = MOH 705A
 
 Month = MONTH
 
-Over5YearsDailyOutpatientMorbiditySummarySheet = OVER 5 YEARS - DAILY \
-                                                 OUTPATIENT MORBIDITY SUMMARY \
-                                                 SHEET
+Over5YearsDailyOutpatientMorbiditySummarySheet = OVER 5 YEARS - DAILY OUTPATIENT MORBIDITY SUMMARY SHEET
 
 RepublicOfKenyaMinistryOfHealth = REPUBLIC OF KENYA - MINISTRY OF HEALTH
 
