--- a/rpt/hmis033_weekly_epid_surv_over_5.properties
+++ b/rpt/hmis033_weekly_epid_surv_over_5.properties
@@ -8,10 +8,10 @@ Diagnosis = Diagnosis
 
 From.Date = From Date
 
-Hmis.033.B.Weekly.Epidemiological.Surveillance = HMIS 033 b: Weekly \
-                                                 Epidemiological Surveillance
+Hmis.033.B.Weekly.Epidemiological.Surveillance = HMIS 033 b: Weekly Epidemiological Surveillance
 
 In.Patient.Diag.In  = In Patient (diag in)
+
 In.Patient.Diag.Out = In Patient (diag out)
 
 Out.Patient = Out Patient
