--- a/rpt/hmis055b_lab_monthly_formatted.properties
+++ b/rpt/hmis055b_lab_monthly_formatted.properties
@@ -6,14 +6,12 @@ Category = Category
 
 Csf = CSF
 
-Hmis.Form.055b.Health.Unit.Laboratory.Tests.Monthly.Summary = HMIS FORM 055b: \
-                                                              HEALTH UNIT \
-                                                              LABORATORY TESTS \
-                                                              MONTHLY SUMMARY
+Hmis.Form.055b.Health.Unit.Laboratory.Tests.Monthly.Summary = HMIS FORM 055b: HEALTH UNIT LABORATORY TESTS MONTHLY SUMMARY
 
 Month = Month:
 
-No.Done     = No. done
+No.Done = No. done
+
 No.Positive = No. positive
 
 Other = Other
