--- a/rpt/hmis105_opd_referrals.properties
+++ b/rpt/hmis105_opd_referrals.properties
@@ -8,8 +8,7 @@ F = F
 
 Five.Years.And.Older = Five years and older
 
-Hmis105.Health.Unit.Outpatient.Monthly.Report = HMIS105: HEALTH UNIT \
-                                                OUTPATIENT MONTHLY REPORT
+Hmis105.Health.Unit.Outpatient.Monthly.Report = HMIS105: HEALTH UNIT OUTPATIENT MONTHLY REPORT
 
 M = M
 
