--- a/rpt/PharmaceuticalStockWard.properties
+++ b/rpt/PharmaceuticalStockWard.properties
@@ -6,7 +6,7 @@ Date = Date
 
 FootNotes1 = Value estimation using the unit costs average transferred to this ward for the given product
 
-FootNotes2 = Value estimation using the unit costs weighted average transferred to this ward for the given product (bigger quantities contributes more)
+FootNotes2 = Value estimation using the unit costs weighted average transferred to this ward for the given product (bigger quantities contribute more)
 
 FootNotes3 = Estimation using the last unit cost transferred to this ward for the given product (last market value applied)
 
