--- a/rpt/hmis108_referrals.properties
+++ b/rpt/hmis108_referrals.properties
@@ -6,16 +6,11 @@ Count = Count
 
 Description = Description
 
-Hmis108InpatientMonthlyReport = HMIS 108:      INPATIENT MONTHLY REPORT
+Hmis108InpatientMonthlyReport = HMIS 108: INPATIENT MONTHLY REPORT
 
 Month = Month:
 
-NoteReferredFromThisUnitReferredToThisUnit = *Note: \n- the "referred FROM \
-                                             this unit " are inpatient \
-                                             discharged the selected month.\n- \
-                                             the "referred TO this unit " are \
-                                             inpatient admitted the selected \
-                                             month.
+NoteReferredFromThisUnitReferredToThisUnit = *Note: \n- the "referred FROM this unit" are inpatient  discharged the selected month.\n- the "referred TO this unit" are inpatient admitted the selected month.
 
 Page1 = page 1
 
