Telemetry updates added Telemetry popup + configuration renamed SmsSender class to SmsDaemon

--- a/rsc/settings.properties
+++ b/rsc/settings.properties
@@ -27,6 +27,7 @@ LABMULTIPLEINSERT=yes
 INTERNALPHARMACIES=yes
 MERGEFUNCTION=yes
 SMSENABLED=no
+TELEMETRYENABLED=no
 INTERNALVIEWER=yes
 MAINMENUALWAYSONTOP=no
 RECEIPTPRINTER=yes
