sync + little changes

--- a/rsc/settings.properties.dist
+++ b/rsc/settings.properties.dist
@@ -1,6 +1,6 @@
 # This file contains Open Hospital settings
-LANGUAGE=en
-SINGLEUSER=no
+LANGUAGE=OH_SET_LANGUAGE
+SINGLEUSER=yes
 AUTOMATICLOT_IN=no
 AUTOMATICLOT_OUT=no
 AUTOMATICLOTWARD_TOWARD=no
@@ -27,14 +27,13 @@ LABMULTIPLEINSERT=yes
 INTERNALPHARMACIES=yes
 MERGEFUNCTION=yes
 SMSENABLED=no
-TELEMETRYENABLED=no
 INTERNALVIEWER=yes
 MAINMENUALWAYSONTOP=no
 RECEIPTPRINTER=yes
 VIDEOMODULEENABLED=yes
 PATIENTVACCINEEXTENDED=yes
 ENHANCEDSEARCH=no
-XMPPMODULEENABLED=yes
+XMPPMODULEENABLED=no
 DICOMMODULEENABLED=yes
 DICOMTHUMBNAILS=yes
 ALLOWPRINTOPENEDBILL=yes
