--- a/rsc/ipinfo.properties
+++ b/rsc/ipinfo.properties
@@ -1,1 +1,1 @@
-freegeoip-remote-service.ribbon.base-url=https://freegeoip.app/json:443
+freegeoip-remote-service.ribbon.base-url=https://freegeoip.app:443
