--- a/rsc/settings.properties.dist
+++ b/rsc/settings.properties.dist
@@ -41,4 +41,5 @@ ALLOWMULTIPLEOPENEDBILL=yes
 PATIENTBILLGROUPED=PatientBillGrouped
 PATIENTBILLSTATEMENT=PatientBillStatement
 DEBUG=no
+TELEMETRYENABLED=no
 
