Reorganize distribution files.
- replace startup.cmd -> oh.bat/oh.ps1
- replace startup.sh -> oh.sh
- removed .sample files

to only generate needed .properties from .dist files use oh.bat/oh.sh
option g)

--- a/pom.xml
+++ b/pom.xml
@@ -133,10 +133,8 @@
 							<resources>
 								<resource>
 									<directory>${project.basedir}</directory>
-									<include>oh.ico</include>
+									<include>oh.*</include>
 									<include>README.md</include>
-									<include>startup.cmd</include>
-									<include>startup.sh</include>
 								</resource>
 								<resource>
 									<directory>../openhospital-core</directory>
