OP-95 Add missing translations in reports and beautify queries

--- a/rpt/OH007_lab_monthly_report.properties
+++ b/rpt/OH007_lab_monthly_report.properties
@@ -13,3 +13,13 @@ Material = Material
 Month = Month
 
 Year = Year
+
+AllMaterials = All Materials
+
+Positive = Positive
+
+Negative = Negative
+
+TotalTestsDone = Total tests done
+
+TestsDone = Tests done
