--- a/rsc/settings.properties.dist
+++ b/rsc/settings.properties.dist
@@ -28,7 +28,7 @@ INTERNALPHARMACIES=yes
 MERGEFUNCTION=yes
 SMSENABLED=no
 INTERNALVIEWER=yes
-DOC_DIR=doc
+DOC_DIR=../doc
 MAINMENUALWAYSONTOP=no
 RECEIPTPRINTER=yes
 VIDEOMODULEENABLED=yes
