--- a/rsc/settings.properties.dist
+++ b/rsc/settings.properties.dist
@@ -1,6 +1,6 @@
 # This file contains Open Hospital settings
 LANGUAGE=OH_LANGUAGE
-SINGLEUSER=yes
+SINGLEUSER=YES_OR_NO
 AUTOMATICLOT_IN=no
 AUTOMATICLOT_OUT=no
 AUTOMATICLOTWARD_TOWARD=no
