Fixed MOH717 report as per Transifex review

--- a/rpt/MOH717_Monthly_Workload_Report_for_Hospitals_page2b.properties
+++ b/rpt/MOH717_Monthly_Workload_Report_for_Hospitals_page2b.properties
@@ -48,11 +48,11 @@ OccupationalTherapyNumberOfTreatments = Occupational Therapy - Number of Treatme
 
 Operations = OPERATIONS
 
-OrthopaedicTecnologyNoOfItems = Orthopaedic Tecnology - No of ITEMS e.g. a pair of crutches, Prosthesis, etc as one item
+OrthopaedicTechnologyNoOfItems = Orthopaedic Technology - No of ITEMS e.g. a pair of crutches, Prosthesis, etc as one item
 
 OutpatientRecords = Outpatient records
 
-PhysiotherapyNumberOfTratments = Physiotherapy - Number of Tratments
+PhysiotherapyNumberOfTreatments = Physiotherapy - Number of Treatments
 
 PlainWithoutEnhancement = Plain without enhancement
 
