OP-138 - Patient Photo to File System Repository

--- a/rsc/settings.properties.dist
+++ b/rsc/settings.properties.dist
@@ -43,4 +43,4 @@ ALLOWMULTIPLEOPENEDBILL=yes
 PATIENTBILLGROUPED=PatientBillGrouped
 PATIENTBILLSTATEMENT=PatientBillStatement
 DEBUG=no
-
+PATIENTPHOTO=DB
