--- a/rsc/log4j.properties
+++ b/rsc/log4j.properties
@@ -12,15 +12,15 @@ log4j.appender.StdOut.layout.ConversionPattern=[%d{dd/MMM/yyyy HH:mm:ss}] [%X{OH
 # File Appender (with classes), daily rotation
 log4j.appender.RollingFile = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.RollingFile.DatePattern='.'yyyy-MM-dd
-log4j.appender.RollingFile.File=LOG_DEST
+log4j.appender.RollingFile.File=/home/andrei/oh
 log4j.appender.RollingFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.RollingFile.layout.ConversionPattern=[%d{dd/MMM/yyyy HH:mm:ss}] [%X{OHUserGroup}:%X{OHUser}] %-p - %m (%l)%n
 
 # DB Appender (table columns)
 log4j.appender.DB=org.apache.log4j.jdbc.JDBCAppender
-log4j.appender.DB.URL=jdbc:mysql://DBSERVER:DBPORT/DBNAME?autoReconnect=true
-log4j.appender.DB.user=DBUSER
-log4j.appender.DB.password=DBPASS
+log4j.appender.DB.URL=jdbc:mysql://localhost:3307/oh?autoReconnect=true
+log4j.appender.DB.user=isf
+log4j.appender.DB.password=isf123
 log4j.appender.DB.sql=INSERT INTO LOG (LOG_TYPE, LOG_CLASS, LOG_METHOD, LOG_TIME, LOG_MESS, LOG_USER) VALUES (1, '%C', '%M', '%d{yyyy-MM-dd HH:mm:ss}', LEFT('%m', 1024), '%X{OHUser}')
 log4j.appender.DB.layout=org.apache.log4j.PatternLayout
 
@@ -28,12 +28,13 @@ log4j.appender.DB.layout=org.apache.log4j.PatternLayout
 log4j.formatMsgNoLookups=true 
 
 # Assigning appenders to packages (application loggers)
-log4j.category.org.isf=LOG_LEVEL,RollingFile
+log4j.category.org.isf=DEBUG,RollingFile
 log4j.additivity.org.isf = false
 
 # Assigning appenders to Hibernate packages (DB loggers)
 # - hibernate.SQL to DEBUG for SQL queries to be logged
 # - hibernate.type to TRACE for queries parameters to be logged with "binding parameter [?]"
-log4j.logger.org.hibernate=LOG_LEVEL,RollingFile,StdOut
-#log4j.logger.org.hibernate.SQL=INFO,RollingFile,StdOut
-#log4j.logger.org.hibernate.type=INFO,RollingFile,StdOut
+log4j.logger.org.hibernate=TRACE,RollingFile,StdOut
+log4j.logger.org.hibernate.SQL=DEBUG,RollingFile,StdOut
+log4j.logger.org.hibernate.type=TRACE,RollingFile,StdOut
+
