completed max profile picture size

--- a/rsc/settings.properties.dist
+++ b/rsc/settings.properties.dist
@@ -44,3 +44,4 @@ PATIENTBILLGROUPED=PatientBillGrouped
 PATIENTBILLSTATEMENT=PatientBillStatement
 DEBUG=no
 PATIENTPHOTO=DB
+MAXPROFPICFILESIZEBYTES=4096
