--- a/pom.xml
+++ b/pom.xml
@@ -35,26 +35,9 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<!-- latest versions doen't work well with JUnit5 (jupiter) -->
-				<version>2.19.1</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.junit.platform</groupId>
-						<artifactId>junit-platform-surefire-provider</artifactId>
-						<version>1.0.3</version>
-					</dependency>
-		        	<dependency>
-						<groupId>org.junit.jupiter</groupId>
-						<artifactId>junit-jupiter-engine</artifactId>
-						<version>5.0.3</version>
-					</dependency>
-				</dependencies>
-				<configuration>
-					<additionalClasspathElements>
-						<additionalClasspathElement>bundle/language_en.properties</additionalClasspathElement>
-					</additionalClasspathElements>
-				</configuration>
+				<version>2.22.2</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
