OP-906 Fix GUI Tests with Spring 5 and Junit 5 (jupiter) (#1199)
* Fix pom.xml

- add surefire-plugin (with recommended version)
- add bundle folder in tests classpath
- removed duplicated bundle from test resources

* Add minimal log4j.properties

* Remove duplicated bundle

* Use expected bundles in tests

* No need to check SINGLEUSER prop

* Fix pom.xml

- update to latest surefire-plugin
- remove useless classpath element

--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,28 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>3.2.0</version>
 				<executions>
+					<execution>
+						<id>add-test-resource</id>
+						<phase>generate-test-sources</phase>
+						<goals>
+							<goal>testResources</goal>
+						</goals>
+						<configuration>
+							<resources>
+								<resource>
+									<directory>bundle</directory>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
 					<execution>
 						<id>copy-resources</id>
 						<phase>validate</phase>
@@ -103,10 +122,6 @@
 							</resources>
 						</configuration>
 					</execution>
-					<!-- <execution> <id>copy-doc</id> <phase>validate</phase> <goals> <goal>copy-resources</goal> 
-						</goals> <configuration> <outputDirectory>${project.basedir}/target/OpenHospital20/doc</outputDirectory> 
-						<resources> <resource> <directory>doc</directory> </resource> </resources> 
-						</configuration> </execution> -->
 					<execution>
 						<id>copy-report</id>
 						<phase>validate</phase>
