OP-921 remove unused conversion routines and JODA package from pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -263,7 +263,7 @@
 			<artifactId>jcalendar</artifactId>
 			<version>1.4</version>
 		</dependency>
-		<dependency>\
+		<dependency>
 			<groupId>org.rxtx</groupId>
 			<artifactId>rxtx</artifactId>
 			<version>2.1.7</version>
