--- a/rsc/settings.properties.dist
+++ b/rsc/settings.properties.dist
@@ -41,6 +41,7 @@ ALLOWPRINTOPENEDBILL=yes
 ALLOWMULTIPLEOPENEDBILL=yes
 PATIENTBILLGROUPED=PatientBillGrouped
 PATIENTBILLSTATEMENT=PatientBillStatement
+TELEMETRYENABLED=no
 DEBUG=no
 USERSLISTLOGIN=no
 STRONGPASSWORD=yes
