--- a/rsc/settings.properties.dist
+++ b/rsc/settings.properties.dist
@@ -42,4 +42,4 @@ ALLOWMULTIPLEOPENEDBILL=yes
 PATIENTBILLGROUPED=PatientBillGrouped
 PATIENTBILLSTATEMENT=PatientBillStatement
 DEBUG=no
-
+USERSLISTLOGIN=no
