--- a/rsc/telemetry.properties.dist
+++ b/rsc/telemetry.properties.dist
@@ -6,6 +6,9 @@ telemetry.daemon.thread.loop.seconds=10
 telemetry-gateway-service.base-url=http://localhost:8080
 
 # enabled remote geo ip lookup service
+# allowed values:
+# - geoiplookup-remote-service
+# - ipapi-remote-service
 telemetry.enabled.geo.ip.lookup.service=geoiplookup-remote-service
 # endpoints remote services
 geoiplookup-remote-service.ribbon.base-url=https://json.geoiplookup.io
