feat: moved all telemetry configuration in telemetry.properties

--- a/rsc/telemetry.properties
+++ b/rsc/telemetry.properties
@@ -4,3 +4,6 @@ telemetry.daemon.enabled=true
 telemetry.daemon.thread.loop.seconds=10
 # remote data collector server base url
 telemetry-gateway-service.base-url=http://localhost:8080
+
+# endpoints remote services
+geoiplookup-remote-service.ribbon.base-url=https://json.geoiplookup.io
