Add TELEMETRYENABLED to .dist file

--- a/rsc/settings.properties.dist
+++ b/rsc/settings.properties.dist
@@ -41,8 +41,8 @@ ALLOWPRINTOPENEDBILL=yes
 ALLOWMULTIPLEOPENEDBILL=yes
 PATIENTBILLGROUPED=PatientBillGrouped
 PATIENTBILLSTATEMENT=PatientBillStatement
-TELEMETRYENABLED=no
 DEBUG=no
 USERSLISTLOGIN=no
 STRONGPASSWORD=yes
 STRONGLENGTH=10
+TELEMETRYENABLED=yes
