OP-895 implement password strength test; set default to true

--- a/rsc/settings.properties.dist
+++ b/rsc/settings.properties.dist
@@ -43,4 +43,4 @@ PATIENTBILLGROUPED=PatientBillGrouped
 PATIENTBILLSTATEMENT=PatientBillStatement
 DEBUG=no
 USERSLISTLOGIN=no
-STRONGPASSWORD=no
+STRONGPASSWORD=yes
