OP-895 implement password strength test

--- a/rsc/settings.properties.dist
+++ b/rsc/settings.properties.dist
@@ -43,4 +43,5 @@ PATIENTBILLGROUPED=PatientBillGrouped
 PATIENTBILLSTATEMENT=PatientBillStatement
 DEBUG=no
 USERSLISTLOGIN=no
+STRONGPASSWORD=yes
 STRONGLENGTH=10
