Prepare .dist for scripts

--- a/rsc/settings.properties.dist
+++ b/rsc/settings.properties.dist
@@ -45,4 +45,4 @@ DEBUG=no
 USERSLISTLOGIN=no
 STRONGPASSWORD=yes
 STRONGLENGTH=10
-PATIENTPHOTOSTORAGE=DB
+PATIENTPHOTOSTORAGE=OH_PATH_SUBSTITUTE/PHOTO_DIR
