Example report with summary

--- a/rpt/BillsReportMonthlyWard_subreport.properties
+++ b/rpt/BillsReportMonthlyWard_subreport.properties
@@ -14,8 +14,4 @@ To = To
 
 Periodical.Incomes.Billed.And.Receivables.Report = Periodical Incomes/Billed and Receivables Report
 
-Month.Summary.per.Ward = (month summary per ward)
-
-Summary = Summary
-
-OPD.wards = OPD wards
+Month.Summary = (month summary)
