Apply suggestions from code reviews

--- a/rpt/BillsReport.properties
+++ b/rpt/BillsReport.properties
@@ -16,7 +16,7 @@ Paid = Paid
 
 Patient = Patient
 
-Periodical.Incomes.Billed.And.Receivables.Report = Periodical Incomes / Billed and Receivables Report
+Periodic.Incomes.Billed.And.Receivables.Report = Periodic Incomes / Billed and Receivables Report
 
 All.Invoices = (all invoices)
 
