--- a/rpt/BillsReportMonthlyWard.properties
+++ b/rpt/BillsReportMonthlyWard.properties
@@ -12,7 +12,7 @@ Report.From = report from
 
 To = To
 
-Periodical.Incomes.Billed.And.Receivables.Report = Periodical Incomes/Billed and Receivables Report
+Periodic.Incomes.Billed.And.Receivables.Report = Periodic Incomes/Billed and Receivables Report
 
 Month.Summary.per.Ward = (month summary per ward)
 
