OP-875 link bill admission (#1332)
* First commit (WIP)

* Example report

* Example report with summary

* Add missing .jasper

* Better admission status handling

* Apply suggestions from code reviews

--- a/rpt/BillsReportMonthlyWard.properties
+++ b/rpt/BillsReportMonthlyWard.properties
@@ -12,6 +12,10 @@ Report.From = report from
 
 To = To
 
-Periodic.Incomes.Billed.And.Receivables.Report = Periodic Incomes / Billed and Receivables Report
+Periodic.Incomes.Billed.And.Receivables.Report = Periodic Incomes/Billed and Receivables Report
 
-Month.Summary = (month summary)
+Month.Summary.per.Ward = (month summary per ward)
+
+Summary = Summary
+
+OPD.wards = OPD wards
