--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,36 @@
 						</configuration>
 					</execution>
 					<execution>
+						<id>copy-report_extra</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.basedir}/target/OpenHospital20/rpt_extra</outputDirectory>
+							<resources>
+								<resource>
+									<directory>rpt_extra</directory>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+					<execution>
+						<id>copy-report-stat</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.basedir}/target/OpenHospital20/rpt_stat</outputDirectory>
+							<resources>
+								<resource>
+									<directory>rpt_stat</directory>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+					<execution>
 						<id>copy-script</id>
 						<phase>validate</phase>
 						<goals>
@@ -216,6 +246,8 @@
 								<exclude>doc/**/*.txt</exclude>
 								<exclude>lib/**</exclude>
 								<exclude>rpt_base/**</exclude>
+								<exclude>rpt_extra/**</exclude>
+								<exclude>rpt_stat/**</exclude>
 								<exclude>rsc/**</exclude>
 								<exclude>src/test/resources/**</exclude>
 								<exclude>src/main/resources/**</exclude>
