--- a/rsc/log4j.properties.dist
+++ b/rsc/log4j.properties.dist
@@ -28,7 +28,7 @@ log4j.appender.DB.layout=org.apache.log4j.PatternLayout
 log4j.formatMsgNoLookups=true 
 
 # Assigning appenders to packages (application loggers)
-log4j.category.org.isf=LOG_LEVEL,RollingFile
+log4j.logger.org.isf=LOG_LEVEL,RollingFile
 log4j.additivity.org.isf = false
 
 # Assigning appenders to Hibernate packages (DB loggers)
