OP-1048 Fix OH009 and OH010 layouts

--- a/rpt_stat/OH010_OutPatientReport.properties
+++ b/rpt_stat/OH010_OutPatientReport.properties
@@ -10,7 +10,7 @@ Attendance = ATTENDANCE
 
 City = CITY
 
-DateUppercase = DATE
+Date = DATE
 
 Day = Day
 
@@ -20,23 +20,19 @@ Disease = DISEASE
 
 From = From
 
-FromUppercase = FROM
-
 New = New
 
 Night = Night
 
 OutPatient = OutPatient
 
-Patid = PATID
+PatID = PAT. ID
 
 Re = Re
 
 Sex = SEX
 
 To = To
-
-ToUppercase = TO
 
 Total = Total
 
