Removed xml file

--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,15 @@
 .settings
 bin
 logs
-/target/
 .idea/
 .vscode/
 *.iml
 *.bak
+*.log
+*.old
 *.pdf
 /data/
 /rsc/*.properties
 /rsc/*.pref
+/rsc/*.xml
+/target/
